abhivision changed setup.sh

--- a/sentiment/Dockerfile
+++ b/sentiment/Dockerfile
@@ -1,4 +1,3 @@
-FROM abhivision/roboapp:f0
+FROM abhivision/roboapp:f1
 RUN git pull --rebase origin master
-RUN pip install -r requirements.pip
-
+RUN pip install -r requirements.txt
