abhivision/nayana/amru changed docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,18 @@ version: '2'
 services:
    db:
      image: postgres:9.5
-     environment:
-        - POSTGRES_NAME:roboadvisordb
    web:
-     image: abhivision/roboadvisor:f0
-     command: python3 manage.py runserver --setting=app.production_settings 0.0.0.0:8000
+     image: aws/web:v0
+     environment:
+       - DJANGO_SETTINGS_MODULE=app.setting_postgres
+     command: python3 manage.py runserver --setting=app.setting_postgres 0.0.0.0:8000
      ports:
        - "80:8000"
      depends_on:
        - db
    sentiment:
-     image: abhivision/roboapp:f1
+     image: aws/sentiment:v0
+     environment:
+       - DJANGO_SETTINGS_MODULE=robo_app.prod_settings
      depends_on:
        - db
