--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '2'
 services:
    db:
      image: postgres:9.5
-     ports: "5432:5432"
+     ports: 
+       - "5432:5432"
    web:
      image: aws/web:v0
      environment:
