--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
      image: postgres:9.5
      ports: 
        - "5432:5432"
+     volumes:
+       - /var/lib/mysql
    web:
      image: aws/web:v0
      environment:
