--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
      ports: 
        - "5432:5432"
      volumes:
-       - /var/lib/mysql
+       - data
    web:
      image: aws/web:v0
      environment:
