--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
      ports: 
        - "5432:5432"
      volumes:
-       - data
+       - ./data:/var/lib/postgresql/data
    web:
      image: aws/web:v0
      environment:
